Fixed bug where object type would be disabled when first opening dotted chart page

--- a/ocel.html
+++ b/ocel.html
@@ -1253,7 +1253,7 @@
 							<label for="dottedChartSelectCategory">Categorize by:</label>
 							<select id="dottedChartSelectCategory" style="font-size: 16pt" onchange="dottedChart.buildDottedChart()">
 								<option value="Activity" selected>Activity</option>
-								<option value="Object type" disabled>Object type</option>
+								<option value="Object type">Object type</option>
 							</select>
 							<br>
 							<label for="dottedChartRandomSamplingValue" title="Percentage of dots to be removed">Random sampling (%):</label>
