Fixed index attribute for event viewpoint dotted chart

--- a/ocel.html
+++ b/ocel.html
@@ -1259,7 +1259,7 @@
 							<label id="dottedChartSelectOrderSortingLabel" for="dottedChartSelectOrderSorting">Sort index by:</label>
 							<select id="dottedChartSelectOrderSorting" style="font-size: 16pt" onchange="dottedChart.buildDottedChart()" checked>
 								<option value="Creation time" selected>Creation time</option>
-								<option value="Creation time + object type">Creation time + object type</option>
+								<option value="Creation time + object type">Object type</option>
 							</select>
 							<br id="dottedChartSelectOrderSortingBr">
 							<label for="dottedChartRandomSamplingValue" title="Percentage of dots to be removed">Random sampling (%):</label>
